<resources>
    <!--Basic Information-->
    <string name="app_name">FastMind</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!--Hints-->
    <string name="email_hint">Enter Your Email</string>
    <string name="username_hint">Enter Your Username</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="action_sign_in_short">Sign in</string>

    <!--Error Messages-->
    <string name="invalid_Email">Invalid Email</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="no_internet_connection">Sorry, No Internet Connection</string>

    <!--Single word for actions-->
    <string name="login">Login</string>
    <string name="signin">Signin</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="state">State</string>
    <string name="result">Result</string>
    <string name="score">Score</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>

    <!--MainActivity-->
    <string name="continues">Continue</string>
    <string name="start_new_game">Start New Game</string>
    <string name="single_game">Single Game</string>
    <string name="multi_player_game">Multi Player Game</string>
    <string name="challenge">Challenge</string>
    <string name="rank">Rank</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!--About Activity-->
    <string name="fast_mind_description">Open Source Online RealTime Android Game</string>

    <!--User Session LogIO-->
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="already_a_member_login">Already a member? Login</string>

    <!--Server Information-->
    <string name="LOCALHOST">http://192.168.43.12:</string>
    <string name="PORT">3000</string>

    <!--UI Default Value-->
    <string name="timer_starter">Timer : 10s</string>

    <!--Game State-->
    <string name="win_state">Yes! You Are The Winner</string>
    <string name="lose_state">Ops You Lose this Challenge</string>
    <string name="play_for_ever">Play For Ever</string>
    <string name="challenge_request">Challenge Request</string>
    <string name="go_next_level">Go to next Level ?</string>
    <string name="waiting">Waiting....</string>
    <string name="player_avatar">Player Avatar</string>
    <string name="challenge_button">Challenge Button</string>

    <!--Settings Actions-->
    <string name="change_avatar">Change Avatar</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">Change Email</string>
    <string name="change_pass">Change Password</string>
    <string name="delete_account">Delete Account</string>
</resources>
