<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".activities.SettingsActivity">

            <ImageView
                android:id="@+id/playerCurrentAvatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen200dp"
                android:contentDescription="@string/player_avatar" />

            <Button
                android:id="@+id/changeAvatarButton"
                style="@style/ActionButtonStyle"
                android:text="@string/change_avatar" />

            <Button
                android:id="@+id/changeUsernameButton"
                style="@style/ActionButtonStyle"
                android:text="@string/change_username" />

            <Button
                android:id="@+id/changeEmailButton"
                style="@style/ActionButtonStyle"
                android:text="@string/change_email" />

            <Button
                android:id="@+id/changePassButton"
                style="@style/ActionButtonStyle"
                android:text="@string/change_pass" />

            <Button
                android:id="@+id/deleteAccountButton"
                style="@style/ActionButtonStyle"
                android:text="@string/delete_account" />
        </LinearLayout>
    </ScrollView>
</layout>