<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkGrey"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usernameInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="@dimen/dimen10dp"
                android:textColor="@color/green"
                android:textSize="@dimen/dimen15sp"
                tools:text="AmrDeveloper" />

            <TextView
                android:id="@+id/levelInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="@dimen/dimen10dp"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen15sp"
                tools:text="Level : 99" />

            <TextView
                android:id="@+id/scoreInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="@dimen/dimen10dp"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen15sp"
                tools:text="Score : 20.000.000 $" />

            <Button
                android:id="@+id/continueOption"
                style="@style/ActionButtonStyle"
                android:onClick="continueSingleGame"
                android:text="@string/continues" />

            <Button
                android:id="@+id/startOption"
                style="@style/ActionButtonStyle"
                android:onClick="newSingleGame"
                android:text="@string/start_new_game" />

            <Button
                android:id="@+id/challengeOption"
                style="@style/ActionButtonStyle"
                android:onClick="challengeActivity"
                android:text="@string/challenge" />

            <Button
                android:id="@+id/feedOption"
                style="@style/ActionButtonStyle"
                android:onClick="feedActivity"
                android:text="@string/feed" />

            <Button
                android:id="@+id/rankOption"
                style="@style/ActionButtonStyle"
                android:onClick="rankActivity"
                android:text="@string/rank" />

            <Button
                android:id="@+id/settingsOption"
                style="@style/ActionButtonStyle"
                android:onClick="settingsActivity"
                android:text="@string/settings" />

            <Button
                android:id="@+id/aboutOption"
                style="@style/ActionButtonStyle"
                android:onClick="aboutActivity"
                android:text="@string/about" />

            <Button
                android:id="@+id/logoutOption"
                style="@style/ActionButtonStyle"
                android:onClick="logoutAction"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>
</layout>