<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dimen280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@null"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="@dimen/dimen8dp"
    app:cardElevation="@dimen/dimen5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen38sp"
            android:layout_marginBottom="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:lines="1"
            android:text="@string/refuse"
            android:textColor="@color/purple"
            android:textSize="@dimen/dimen20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen15dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:lines="2"
            android:text="@string/win_state"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:lines="2"
            android:text="@string/score"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen16sp" />

        <TextView
            android:id="@+id/scorePoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:gravity="center"
            android:lines="2"
            android:text="+1000"
            android:textColor="@color/green"
            android:textSize="@dimen/dimen15sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/acceptAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen10dp"
            android:background="@null"
            android:contentDescription="@string/accept"
            android:src="@drawable/ic_checked"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.cardview.widget.CardView>