<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dimen280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@null"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="@dimen/dimen8dp"
    app:cardElevation="@dimen/dimen5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen38sp"
            android:layout_marginBottom="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:lines="1"
            android:text="@string/challenge_request"
            android:textColor="@color/purple"
            android:textSize="@dimen/dimen20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen15dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:lines="2"
            android:textColor="@color/gray"
            tools:text="Challenge Request from : AmrDeveloper" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/acceptAction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen10dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/accept"
                android:src="@drawable/ic_checked"
                android:text="@string/accept"
                android:textAllCaps="false" />

            <ImageButton
                android:id="@+id/cancelAction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen10dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/refuse"
                android:src="@drawable/ic_cancel"
                android:text="@string/refuse"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>